# OpenGL_code

Light/: CubeMaps.cpp  CubeMaps.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h
PRT/: prt.cpp
homework_1/: CMakeLists.txt  Camera.h  Check.h  IndexBuffer.cpp  Render.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  basic.shader  main.cpp  readme.md
homework_1/.cache/clangd/index/: Check.h.BAC61BB5C5A38111.idx  IndexBuffer.cpp.716F1C91F790C7A6.idx  IndexBuffer.h.D0638AABB77FD141.idx  Render.cpp.4824E03141B43C7D.idx  Render.h.5BC1FC4C82C0C27F.idx  Shader.cpp.65EE942C50AE8212.idx  Shader.h.676F2B6FC12FFF8C.idx  VertexArray.cpp.AC3057E6A599E8F6.idx  VertexArray.h.7E02C7474F651BA7.idx  VertexBuffer.cpp.2837451A2CDE72B1.idx  VertexBuffer.h.CBBB0D55F881DAD4.idx  VertexBufferLayout.h.12B2A6CC4D1CEB22.idx  glad.c.C9A9C8875225945C.idx  main.cpp.A725EFFCA339E5FE.idx
homework_1/src/: glad.c
test2_window/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Render.cpp  VertexArray.h  VertexBufferLayout.h  basic.shader  main.cpp
test2_window/.cache/clangd/index/: IndexBuffer.cpp.8EE56869DEC1541F.idx  IndexBuffer.h.1EF67A112C4443C1.idx  Render.cpp.9235585CA958156E.idx  Render.h.262C9BB62B7EF523.idx  VertexArray.cpp.22360006A4662CE5.idx  VertexArray.h.B42BEF695CE4CB30.idx  VertexBuffer.cpp.2C2F7FF8273C73DA.idx  VertexBuffer.h.B380DE04F8492F27.idx  glad.c.83F826A44B4CA25A.idx  (+3 more)
test_1/: CMakeLists.txt  triangle.cpp
(+3 files in other folders)
